# Gears

./: .gitignore  CMakeLists.txt  build_project.bat  run_logs.bat
gradle-files/: AndroidManifest.xml  CMakeLists.txt  build.gradle
include/: Logger.h  graphics.h  pch.h
src/: entry.cpp  graphics.cpp
test/: test_entry.cpp
